created class, id for all inline styles

--- a/public/wall.html
+++ b/public/wall.html
@@ -3,9 +3,9 @@
         <div flex-xs="100" flex-sm="100" flex-gt-sm="50">
             <img src="images/homepage-cube.gif" class="img-responsive" />
         </div>
-        <div layout-xs="column" layout-sm="column" layout-gt-sm="row" style="position:absolute;left:15%;top:43%;text-align:justify;">
+        <div layout-xs="column" layout-sm="column" layout-gt-sm="row" id="home-data">
             <div flex-gt-sm="50" layout-margin>
-                <p style="font-family:times new roman;text-align:center;">
+                <p id="home-heading-line">
                     <strong>
                         THE GOOD BUSINESS ONLY SUCCEED WITH RIGHT BALANCE OF <a ui-sref="commercial.home" style="color:rgb(0,162,233);line-height:200%;">MONEY</a> AND <a ui-sref="essential.home" style="color:red">MARKETING!</a>
                     </strong>
@@ -113,7 +113,7 @@
             </div>
         </div>
     </div>
-    <div class="footer" style="position:fixed">
+    <div class="footer" id="home-footer">
         <p>
             2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
             <a ui-sref="home">EssCom</a>
