dynamic year in footer

--- a/public/footer.html
+++ b/public/footer.html
@@ -1,6 +1,6 @@
-<div class="footer">
+<div class="footer" ng-controller="FooterController">
     <p>
-        2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
+        {{date}} Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
         <a ui-sref="home">EssCom</a>
     </p>
 </div>
