--- a/public/wall.html
+++ b/public/wall.html
@@ -113,9 +113,9 @@
             </div>
         </div>
     </div>
-    <div class="footer" id="home-footer">
+    <div class="footer" id="home-footer" ng-controller="FooterController">
         <p>
-            2016 Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
+            {{date}} Copyright © EssCom Enterprise Services. All Rights Reserved I Powered by 
             <a ui-sref="home">EssCom</a>
         </p>
     </div>
